fix: hide overflowed content

--- a/src/omniSearch/index.scss
+++ b/src/omniSearch/index.scss
@@ -2,6 +2,7 @@ html,
 body {
 	width: 100%;
 	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 body {
